data/collection/fixes/descriptions/java/JDK-8008539
This program

import java.util.*;

interface SAM {
    Object m();
}

class Test {
    SAM s = SAM::new;
}

Gives:

Test.java:8: error: {0} is abstract; cannot be instantiated
    SAM s = SAM::new;
            ^
1 error


Error message should be improved.